jenkins-Docs-build-Docs-build-homepage-196

--- a/templated-json/list-item/list-item-create-apps.json
+++ b/templated-json/list-item/list-item-create-apps.json
@@ -2,7 +2,7 @@
   "elements": {
     "listItemLink": {
       "elementType": "link",
-      "linkURL": "apps/index.html",
+      "linkURL": "apps/tutorials/tutorial_starter-kit.html",
       "linkText": "{{listitemcreateappslistItemLink}}"
     },
     "linkIcon": {
